kubernetes/homeassistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-web
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
      sectionName: http
  hostnames:
    - homeassistant.pabpereza.dev
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: local-only
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homeassistant
          port: 8123
